# veriphysics-sdk

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  flow.csv  gyro.csv  install_deps.sh  product_strategy.md  run_services.sh  start.sh
analysis/: make_test_data.py  mock_flow.csv  mock_gyro.csv  verify_flow.py
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/xibalbasolutions/veriphysics/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/sdk/: build.gradle.kts
android/sdk/src/main/cpp/: CMakeLists.txt  MotionVerifier.cpp  MotionVerifier.h  native-lib.cpp
backend/: Dockerfile  debug_backend.py  inspect_alg.py  inspect_builder.py  inspect_c2pa.py  requirements.txt  test_auth.sh  test_c2pa.py  veriphysics.db
backend/app/: auth.py  c2pa_signer.py  database.py  main.py  models.py  verifier.py
backend/certs/: generate_certs.sh  ps256.crt  ps256.csr  ps256.pem
cpp_core/: CMakeLists.txt  MotionVerifier.cpp  MotionVerifier.h  main.cpp  native-lib.cpp
frontend/: Dockerfile  package-lock.json  package.json  verify_ui.js
frontend/app/admin/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts
frontend/test-results/: .last-run.json
frontend/test-results/tests-auth_flow-auth-and-dashboard-flow/: error-context.md
frontend/tests/: auth_flow.spec.ts
verification/: verify_dashboard.py
(+2 files in other folders)
